Update SpotifyRepository.java